--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hi ! I'm Ashlee Tiwari
+title: Hi! I'm Ashlee Tiwari
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -11,11 +11,11 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Ashlee Tiwari # add your name
 author-img: me.png # add your photo
-about-author: I am eager to learn new domains and enjoy building solutions to challenging problems.Education:Northwestern University | IIT Kanpur  # add description
+about-author: I am eager to learn new domains and enjoy building solutions to challenging problems. Education:Northwestern University | IIT Kanpur  # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: ashleetiw # add your Github handle
-social-linkedin: ashlee-tiwari-8259a7131 # add your Linkedin handle
+social-linkedin: ashleetiwari # add your Linkedin handle
 social-email: ashleetiwari2021@u.northwestern.edu # add your Email address
 
 # Disqus
